--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
     ATT could use this data to identify possible problematic software updates both in the field and in test environments.
   </p>
 
-<hr>
+<hr style="color: #444">
 
 <h3><a href="https://github.com/KallenXCC/VR-Project" target="_blank">Ordinary Wizarding Levels (VR Game)</a> | UCR | 2019</h3>
 <h5>Tools: C#, Unity, Oculus</h5>
@@ -80,7 +80,7 @@
 <h5>Tools: C, Objective-C, ATMega1284</h5>
   <p><a href="https://github.com/KallenXCC/Embedded-Systems-Project" target="_blank">Embedded systems project</a> created to run with hardware on a breadboard.</p>
 
-<hr>
+<hr style="color: #444">
 
 <h3><a href="https://github.com/KallenXCC/Platformer-Project" target="_blank">CitrusRPG</a> | Citrus Hack | 2015</h3>
 <h5>Tools: Java, Greenfoot</h5>
