--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <style>
+      hr {
+        border: 0;
+        clear:both;
+        display:block;
+        width: 96%;               
+        background-color:#EEEEEE;
+        color: #444;
+        height: 1px;
+      }
+    </style>
 </head>
 <body style="margin: 10px auto; max-width: 750px; line-height: 1.6; font-size: 18px; color: #444; padding: 0 10px; background-color: #EEEEEE;">
 
@@ -64,7 +75,7 @@
     ATT could use this data to identify possible problematic software updates both in the field and in test environments.
   </p>
 
-<hr style="color: #444">
+<hr />
 
 <h3><a href="https://github.com/KallenXCC/VR-Project" target="_blank">Ordinary Wizarding Levels (VR Game)</a> | UCR | 2019</h3>
 <h5>Tools: C#, Unity, Oculus</h5>
@@ -80,7 +91,7 @@
 <h5>Tools: C, Objective-C, ATMega1284</h5>
   <p><a href="https://github.com/KallenXCC/Embedded-Systems-Project" target="_blank">Embedded systems project</a> created to run with hardware on a breadboard.</p>
 
-<hr style="color: #444">
+<hr />
 
 <h3><a href="https://github.com/KallenXCC/Platformer-Project" target="_blank">CitrusRPG</a> | Citrus Hack | 2015</h3>
 <h5>Tools: Java, Greenfoot</h5>
