--- a/projects.html
+++ b/projects.html
@@ -9,12 +9,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <style>
       hr {
-        border: 0;
+        border: none; 
+        border-bottom: 1px solid #444;
         clear:both;
         display:block;
         width: 96%;               
         background-color:#EEEEEE;
-        color: #444;
         height: 1px;
       }
     </style>
