--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <style> canvas {border: 1px solid white; background-color: black; background-image:url("pictures/BB_LinkedInCrop.jpg"); background-size: 400px;
+    <style> canvas {border: 1px solid white; background-color: black; background-image:url("pictures/kallenxcc.png"); background-size: 400px;
     width: 400px; max-width: 100%; height: auto; background-repeat: no-repeat;}</style>
 </head>
 <body style="overflow: hidden; margin: 10px auto; max-width: 750px; line-height: 1.6; font-size: 18px; color: #444; padding: 0 10px; background-color: #EEEEEE;">
