--- a/projects.html
+++ b/projects.html
@@ -29,11 +29,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="index.html" class="navbar-brand">BB</a>
+      <a href="easteregg.html" class="navbar-brand">BB</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li class="active"><a href="projects.html">Projects</a></li>
