updated home screen, experience, resume

--- a/experience.html
+++ b/experience.html
@@ -42,7 +42,9 @@
     </div>
   </div>
   <h4 style="margin-left: 20;">Math & Computer Science Tutor | Fullerton, CA | December 2023 - Present</h4>
-  <p style="margin-left: 30;">Part-time tutor K-8 students in Math and Computer Science concepts.</p>
+  <p style="margin-left: 30;">Tutor students K-8 in Common Core Math, iReady Math, and fundamental Computer Science concepts.
+    Plan and adapt curriculum to each student's current understanding.
+    Write reports for parents to stay updated with their children's progress.</p>
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <h3 style="margin-left: 10;"><a href="https://www.jetheaddev.com/" target="_blank">JetHead Development Inc.</a></h3>
