--- a/index.html
+++ b/index.html
@@ -37,8 +37,17 @@
 <h3 style="margin-left: 10;">Hello, I'm Braeton Buckley</h3> 
 <a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/"><img style="display: inline; white-space: nowrap;" src="pictures/linkedin_logo.jpg" alt="LinkedIn" width="40" height="40"></a>
 <a href="https://github.com/KallenXCC"><img style="display: inline; white-space: nowrap;" src="pictures/github_logo.png" alt="GitHub" width="40" height="40"></a>
-<h4> I'm a Software Engineer with 3 years of experience at <a href="https://jetheaddev.com">JetHead Development Inc.</a>
-I received my Bachelor's in Computer Science in 2019 from <a href="https://www.ucr.edu/">UC Riverside.</a></h4>
+<h4> I'm a Software Engineer with 3 years of experience at <a href="https://jetheaddev.com">JetHead Development Inc.</a>, building new features and triaging bugs while exercising agile development with SDLC
+I received my Bachelor's in Computer Science in 2019 from <a href="https://www.ucr.edu/">UC Riverside.</a>
+
++Built new KPIs to track memory and CPU usage throughout different satellite box models to help identify possible issues before they became critical, reducing time spent on bugfixing
++Improved user troubleshooting experience by updating screens with QR codes and updating the troubleshooting flow, reducing calls to customer care
++Designed implementation to reconnect the client to the server in standby to reduce boot up time by 2 minutes in scenarios where the client lost connection in standby
+
+"As the lead developer, Braeton demonstrated continuous dedication to excellence and attention to detail in all aspects of the role. I have also been impressed with his communication skills and ability to work collaboratively with team members. It has been a pleasure working with Braeton from the very beginning, and I would jump at the chance to do it again." -Varun Madahar, Director of Enginering, JetHead Development Inc.
+
+I get excited for opportunities to create useful software in any industry. Email me at braetonbuckley@gmail.com or continue exploring my portfolio here
+</h4>
 <img src="pictures/BB_LinkedIn.jpg" class="img-responsive" alt="BB_LinkedIn" width="800" height="800">
 
 </div>
