--- a/experience.html
+++ b/experience.html
@@ -33,6 +33,18 @@
 </nav>
 
 <div class="container-fluid">
+  <div class="row"></div>
+    <div class="col-xs-12 col-md-6">
+      <h3 style="margin-left: 10;"><a href="https://p1games.com/" target="_blank">[P1] Games</a></h3>
+    </div>
+    <div class="col-xs-6 col-md-3">  
+      <a href="https://p1games.com/" target="_blank"><img src="pictures/p1logo.png" class="img-responsive" alt="p1games" width="120" height="60"></a>
+    </div>
+  </div>
+  <h4 style="margin-left: 20;">Volunteer Game Programmer | Remote | July 2024 - Present</h4>
+  <p style="margin-left: 30;">Develop games in teams of 8-12 over month long competitions using C#/Unity.
+    Collaborate with designers and artists to bring positive-impact, open-source game concepts to life.</p>
+  
   <div class="row">
     <div class="col-xs-12 col-md-6">
       <h3 style="margin-left: 10;"><a href="https://www.myinnoacademy.com/about/ourvision" target="_blank">Innovation Academy</a></h3>
@@ -41,10 +53,9 @@
       <a href="https://www.myinnoacademy.com/about/ourvision" target="_blank"><img src="pictures/innovation_logo.png" class="img-responsive" alt="Innovation" width="120" height="60"></a>
     </div>
   </div>
-  <h4 style="margin-left: 20;">Math & Computer Science Tutor | Fullerton, CA | December 2023 - Present</h4>
+  <h4 style="margin-left: 20;">Math & Computer Science Tutor | Fullerton, CA | December 2023 - June 2024</h4>
   <p style="margin-left: 30;">Tutor students K-8 in Common Core Math, iReady Math, and fundamental Computer Science concepts.
-    Plan and adapt curriculum to each student's current understanding.
-    Write reports for parents to stay updated with their children's progress.</p>
+    Plan and adapt curriculum to each student's current understanding.</p>
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <h3 style="margin-left: 10;"><a href="https://www.jetheaddev.com/" target="_blank">JetHead Development Inc.</a></h3>
