--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,23 @@
 
 <div class="container-fluid">
 
+  <h3> <a href="https://sam325.itch.io/keito-game" target="_blank">Keito</a> | <a href="https://p1games.com/" target="_blank">[P1] Games</a> | <a href="https://github.com/Blue-Square-Legion" target="_blank">Blue-Square-Legion</a> | 2024</h3>
+  <h5> Tools: C#, HarmonyX, BepInEx, UnityNetcode, Visual Studio</h5>
+  <p> Published SideQuests mod with 300+ downloads for Lethal Company PC game to Thunderstore.
+      Created Collect, Kill, and Secret Quests that contribute to player credits and quota.
+      Patched class behavior using HarmonyX, BepInEx, and UnityNetcode.
+  </p>
+
+  <hr />
+  
+  <h3> <a href="https://github.com/KallenXCC/crunchyroll-mal" target="_blank">Crunchyroll-MAL</a> | <a href="https://github.com/KallenXCC/" target="_blank">KallenXCC</a> | 2024</h3>
+  <h5> Tools: JavaScript, Rust, crunchyroll-rs, MAL API, MongoDB, REST, JSON</h5>
+  <p> Implemented REST API to retrieve Crunchyroll watch history and upload it to MyAnimeList.
+      Utilized MongoDB to lessen impact on MAL servers and integrate software tools: crunchyroll-rs, MAL API.
+  </p>
+
+  <hr />
+  
   <h3> <a href="https://thunderstore.io/c/lethal-company/p/KallenXCC/SideQuests/" target="_blank">SideQuests</a> | <a href="https://store.steampowered.com/app/1966720/Lethal_Company/" target="_blank">LethalCompany</a> | 2024</h3>
   <h5> Tools: C#, HarmonyX, BepInEx, UnityNetcode, Visual Studio</h5>
   <p> Published SideQuests mod with 300+ downloads for Lethal Company PC game to Thunderstore.
@@ -54,7 +71,8 @@
 
   <hr />
 
-  <h3> Reconnect in Standby | JetHead, DirecTV, ATT | 2023</h3>
+  <h3> Reconnect in Standby | <a href="https://www.jetheaddev.com/" target="_blank">JetHead</a>, <a href="
+    https://www.directv.com" target="_blank">DirecTV</a>, <a href="https://www.att.com" target="_blank">ATT</a> | 2023</h3>
   <h5> Tools: C++, Visual Studio, GitLab, DirecTV Genie Mini, Jira, Confluence, Linux</h5>
   <p> Reconnected the client to the server in standby to reduce boot up time by 2 minutes in scenarios where the client lost connection in standby.
       Investigated server connection architecture in order to optimize design.
