--- a/easteregg.html
+++ b/easteregg.html
@@ -37,7 +37,7 @@
 <div class="container-fluid">
 
 <h3 style="margin-left: 10;">Hello, I'm Braeton Buckley</h3>
-    <a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/"><img style="display: inline; white-space: nowrap;" src="pictures/linkedin_logo.jpg" alt="LinkedIn" width="40" height="40"></a>
+    <a href="https://www.linkedin.com/in/braeton-buckley/"><img style="display: inline; white-space: nowrap;" src="pictures/linkedin_logo.jpg" alt="LinkedIn" width="40" height="40"></a>
     <a href="https://github.com/KallenXCC"><img style="display: inline; white-space: nowrap;" src="pictures/github_logo.png" alt="GitHub" width="40" height="40"></a>
     <p style="display: inline">  High Score: <span id="displayHighScore" style="color: #1ad1d1"></span>  </p>
     <p style="display: inline">  Score: <span id="displayScore" style="color: #15d315"></span></p>
