--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="container-fluid">
 
 <h3 style="margin-left: 10;">Hello, I'm Braeton Buckley</h3> 
-<a href="https://www.linkedin.com/in/braeton-buckley-5b8908b0/"><img style="display: inline; white-space: nowrap;" src="pictures/linkedin_logo.jpg" alt="LinkedIn" width="40" height="40"></a>
+<a href="https://www.linkedin.com/in/braeton-buckley/"><img style="display: inline; white-space: nowrap;" src="pictures/linkedin_logo.jpg" alt="LinkedIn" width="40" height="40"></a>
 <a href="https://github.com/KallenXCC"><img style="display: inline; white-space: nowrap;" src="pictures/github_logo.png" alt="GitHub" width="40" height="40"></a>
 <h4> I'm a Software Engineer with 3 years of experience at <a href="https://jetheaddev.com">JetHead Development Inc.</a>, building new features and triaging bugs while exercising agile development with SDLC. </h4>
 <h4>I received my Bachelor's in Computer Science in 2019 from <a href="https://www.ucr.edu/">UC Riverside.</a></h4>
