update keito info

--- a/projects.html
+++ b/projects.html
@@ -46,10 +46,9 @@
 <div class="container-fluid">
 
   <h3> <a href="https://sam325.itch.io/keito-game" target="_blank">Keito</a> | <a href="https://p1games.com/" target="_blank">[P1] Games</a> | <a href="https://github.com/Blue-Square-Legion" target="_blank">Blue-Square-Legion</a> | 2024</h3>
-  <h5> Tools: C#, HarmonyX, BepInEx, UnityNetcode, Visual Studio</h5>
-  <p> Published SideQuests mod with 300+ downloads for Lethal Company PC game to Thunderstore.
-      Created Collect, Kill, and Secret Quests that contribute to player credits and quota.
-      Patched class behavior using HarmonyX, BepInEx, and UnityNetcode.
+  <h5> Tools: Unity, C#, Visual Studio, Wwise</h5>
+  <p> Integrate graphics, audio, and gameplay elements with Unity; Debug and resolve technical issues in the game.
+      Placed top 3 in categories: Most Innovative, Most Fun, Best Sound Design, when judged by peers.
   </p>
 
   <hr />
